# manager

./: .env.example  Cargo.toml  README.md  clippy.toml  docker-compose.yml
.github/workflows/: ci.yml
db/: .env  .gitignore  docker-compose.yml
manager/: .env  .gitignore  Cargo.toml
manager/src/: app_state.rs  main.rs
manager/src/db/: av.rs  executor.rs  map.rs  mod.rs  plan.rs  sampler.rs  scenario.rs  simulator.rs  task.rs  task_run.rs  worker.rs
manager/src/entity/: av.rs  executor.rs  map.rs  mod.rs  plan.rs  prelude.rs  sampler.rs  scenario.rs  sea_orm_active_enums.rs  simulator.rs  task.rs  task_run.rs  worker.rs
manager/src/http/: router.rs
manager/src/http/dto/: av.rs  executor.rs  map.rs  mod.rs  sampler.rs  scenario.rs  simulator.rs  task.rs  worker.rs
manager/src/http/handlers/: av.rs  executor.rs  health.rs  map.rs  mod.rs  plan.rs  sampler.rs  scenario.rs  simulator.rs  task.rs  worker.rs
manager/src/migrator/: m20260126_224007_create_table.rs  m20260127_225907_create_table.rs  m20260128_003656_alter_map_path.rs  m20260128_221408_rename_scenario_path_add_param_path.rs  m20260128_225731_add_av_moduel_sampler_config.rs  m20260224_103310_new_db_schema.rs  m20260305_155925_new_db_schema.rs  mod.rs
manager/src/service/: task.rs
src/: app_state.rs  events.rs  main.rs  reaper.rs
src/db/: av.rs  concrete_run.rs  config_bearing.rs  executor.rs  map.rs  map_file.rs  mod.rs  monitor.rs  plan.rs  sampler.rs  scenario.rs  scenario_file.rs  simulator.rs  task.rs  task_run.rs
src/entity/: av.rs  concrete_run.rs  executor.rs  map.rs  map_file.rs  mod.rs  monitor.rs  plan.rs  prelude.rs  sampler.rs  scenario.rs  scenario_file.rs  sea_orm_active_enums.rs  simulator.rs  task.rs  task_run.rs
src/http/: router.rs
src/migrator/: m20260305_155925_new_db_schema.rs  m20260422_120000_file_bytes.rs  m20260422_180000_drop_path_columns.rs  m20260422_200000_task_run_log.rs  m20260422_220000_normalize_goal_config.rs  m20260422_230000_drop_goal_config.rs  m20260422_234500_pg_notify_triggers.rs  m20260423_000000_task_run_heartbeat.rs  m20260424_000000_task_run_concrete_runs.rs  m20260425_000000_task_status_rename.rs  m20260425_010000_drop_dead_statuses.rs  m20260425_020000_task_archived.rs  m20260503_000000_drop_executor_slurm_array_id.rs  m20260507_000000_monitor.rs  m20260513_000000_monitor_required.rs  m20260514_000000_plan_tags.rs  m20260516_000000_task_last_run_at.rs  m20260521_000000_av_sim_resources.rs  m20260603_000000_concrete_run.rs  mod.rs  (+8 more)
tests/: integration_tag_priority.rs  integration_task.rs
(+36 files in other folders)
