[package]
name = "manager"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
tokio = { version = "1.49.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing-subscriber = "0.3"

[dependencies.sea-orm]
version = "1.1"
features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros", "uuid", "chrono"]

[dependencies.sea-orm-migration]
version = "1.1"
features = ["runtime-tokio-rustls", "sqlx-sqlite"]
